--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    hello
+    <section id="about-me">
+        <nav>
+            <div class="personal__logo">Abdelrahman Abouadma</div>
+            <ul class="nav__link--list">
+                <li>
+                    <a href="" class="
+                        nav__link--anchor
+                        link__hover-effect
+                        link__hover-effect--black
+                    ">Languages</a>
+                </li>
+                <li>
+                    <a href="" class="
+                        nav__link--anchor
+                        link__hover-effect
+                        link__hover-effect--black
+                    ">Projects</a>
+                </li>
+                <li>
+                    <a href="" class="
+                        nav__link--anchor
+                        nav__link--anchor-primary
+                    ">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="flex flex-1">
+            <div class="about-me__info row">
+                <div class="about-me__info--container">
+                    <figure class="about-me__picture--mask" >
+                        <img src="./assets/me.jpeg" class="about-me__picture" alt="My beautiful face!">
+                    </figure>
+                    <h1 class="about-me__info--title">
+                        Hey! I'm <span class="text--purple">Abdelrahman Abouadma</span>
+                    </h1>
+                    <p class="about-me__info--para">I'm a <span class="text--purple">frontend develover</span> and <span class="text--purple">electrical engineer</span> with a strong passion for building responsize and performant web applications with great user experiences that positivly impacts the world.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
