--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
                         Hey! I'm <span class="text--purple">Abdelrahman Abouadma</span>
                     </h1>
                     <p class="about-me__info--para">I'm a <span class="text--purple">frontend develover</span> and <span class="text--purple">electrical engineer</span> with a strong passion for building responsize and performant web applications with great user experiences that positivly impacts the world.</p>
+                    <div class="about-me__links">
+                        <a href="" class="about-me__link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="far fa-envelope"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
                 </div>
+                <figure class="about-me__img--container">
+                    <img src="./assets/undraw_building_websites.svg" alt="">
+                </figure>
             </div>
         </div>
     </section>
