--- a/index.html
+++ b/index.html
@@ -58,8 +58,22 @@
                     </div>
                 </div>
                 <figure class="about-me__img--container">
-                    <img src="./assets/undraw_building_websites.svg" alt="">
+                    <img src="./assets/undraw_building_websites.svg" class="about-me__img" alt="">
                 </figure>
+            </div>
+        </div>
+    </section>
+    <section id="languages">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="" alt="" class="language__img">
+                        </figure>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
