--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,27 +9,28 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section id="about-me">
         <nav>
             <div class="personal__logo">Abdelrahman Abouadma</div>
             <ul class="nav__link--list">
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="#languages" class="
                         nav__link--anchor
                         link__hover-effect
                         link__hover-effect--black
                     ">Languages</a>
                 </li>
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="#projects" class="
                         nav__link--anchor
                         link__hover-effect
                         link__hover-effect--black
                     ">Projects</a>
                 </li>
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="mailto:email@email.com" class="
                         nav__link--anchor
                         nav__link--anchor-primary
                     ">Contact</a>
@@ -38,13 +40,16 @@
         <div class="flex flex-1">
             <div class="about-me__info row">
                 <div class="about-me__info--container">
-                    <figure class="about-me__picture--mask" >
+                    <figure class="about-me__picture--mask">
                         <img src="./assets/me.jpeg" class="about-me__picture" alt="My beautiful face!">
                     </figure>
                     <h1 class="about-me__info--title">
                         Hey! I'm <span class="text--purple">Abdelrahman Abouadma</span>
                     </h1>
-                    <p class="about-me__info--para">I'm a <span class="text--purple">frontend develover</span> and <span class="text--purple">electrical engineer</span> with a strong passion for building responsize and performant web applications with great user experiences that positivly impacts the world.</p>
+                    <p class="about-me__info--para">I'm a <span class="text--purple">frontend develover</span> and <span
+                            class="text--purple">electrical engineer</span> with a strong passion for building
+                        responsize and performant web applications with great user experiences that positivly impacts
+                        the world.</p>
                     <div class="about-me__links">
                         <a href="" class="about-me__link">
                             <i class="fab fa-github"></i>
@@ -70,12 +75,101 @@
                 <div class="language__list">
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="" alt="" class="language__img">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
                         </figure>
+                        <span class="language__name">HTML</span>
                     </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt=""
+                                class="language__img">
+                        </figure>
+                        <span class="language__name">CSS</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt=""
+                                class="language__img">
+                        </figure>
+                        <span class="language__name">JavaScript</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt=""
+                                class="language__img">
+                        </figure>
+                        <span class="language__name">React</span>
+                    </div>
+
                 </div>
             </div>
         </div>
     </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Here are some of my <span class="text--purple">projects</span></h1>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/loopit.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car sales project</h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CS, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo, scelerisque
+                                    sed odio eget, luctus faucibus augue. Fusce volutpat iaculis dapibus. Lorem ipsum
+                                    dolor sit amet, consectetur adipiscing elit. Maecenas id eleifend libero. In hac
+                                    habitasse platea dictumst
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://www.github.com/abdelrahmanhossam05" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="row footer__row">
+            <a href="#" class="footer__anchor">
+                <figure class="footer__logo">
+                    <img src="" alt="" class="footer__logo--img">
+                </figure>
+                <span class="footer__logo--popper">
+                    Top
+                    <i class="fas fa-arrow-up"></i>
+                </span>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://github.com/abdelrahmanhossam05" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">Github</a>
+                <a href="mailto:email@email.com" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">mail</a>
+                <a href="https://github.com/abdelrahmanhossam05" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">Github</a>
+            </div>
+            <div class="footer__copyright">Copyright c 2023 Abdelrahman Abouadma</div>
+        </div>
+        
+    </footer>
+    
 </body>
+
 </html>
